# puyopuyo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: contracts.h  gameboard.h  ipc.h  main.h  puyo.h  runner.h  spritesheet.h  spritesheet_png.h
src/: gameboard.c  main.c  puyo.c  runner.c  spritesheet.c  spritesheet_png.c
